# minesweeper

./: CMakeLists.txt  LICENSE  README.md  set_env_vars.bat
config/: config.xml
include/: About.hpp  ControlPanel.hpp  GameBoard.hpp  GameMainWindow.hpp  Settings.hpp  Tile.hpp
resources/: resources.qrc  resources.rc
src/: About.cpp  ControlPanel.cpp  GameBoard.cpp  GameMainWindow.cpp  Settings.cpp  Tile.cpp  main.cpp
